--- a/pass-cfn.yml
+++ b/pass-cfn.yml
@@ -8,6 +8,7 @@ AWSTemplateFormatVersion: '2010-09-09'
 Conditions:
   NeverValid: !Equals [ True, False ]
 
+# a comment
 
 Resources:
   NullResource:
