--- a/.github/workflows/cfnlinter.yml
+++ b/.github/workflows/cfnlinter.yml
@@ -17,4 +17,4 @@ jobs:
         run: |
           cfn-lint --version
           # cfn-lint -t ./template.yml
-          cfn-lint *.yml
+          cfn-lint -t ./**/*.yml
