--- a/.github/workflows/cfnlinter.yml
+++ b/.github/workflows/cfnlinter.yml
@@ -16,5 +16,4 @@ jobs:
       - name: Print the Cloud Formation Linter Version & run Linter.
         run: |
           cfn-lint --version
-          # cfn-lint -t ./template.yml
-          cfn-lint -t ./**/*.yml
+          cfn-lint -t *
