--- a/.github/workflows/cfnlinter.yml
+++ b/.github/workflows/cfnlinter.yml
@@ -15,5 +15,5 @@ jobs:
 
       - name: Print the Cloud Formation Linter Version & run Linter.
         run: |
-          cfn-lint --version
+          #cfn-lint --version
           cfn-lint -t *
