--- a/pass-cfn.yml
+++ b/pass-cfn.yml
@@ -1,8 +1,12 @@
 ---
 AWSTemplateFormatVersion: '2010-09-09'
 
-#Parameters:
-
+Parameters:
+  Name:
+    Type: String
+    Default: hello
+    Description: a description
+    
 #Mappings:
 
 
