--- a/pass-cfn.yml
+++ b/pass-cfn.yml
@@ -5,8 +5,8 @@ Parameters:
   Name:
     Type: String
     Default: hello
-    Description: a description
-    
+    Description: changed
+        
 #Mappings:
 
 
