--- a/pass-cfn.yml
+++ b/pass-cfn.yml
@@ -6,7 +6,11 @@ Parameters:
     Type: String
     Default: hello
     Description: changed
-        
+  
+  Host:
+    Type: String
+    Default: name
+    
 #Mappings:
 
 
