--- a/.github/workflows/cfnlinter.yml
+++ b/.github/workflows/cfnlinter.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Print the Cloud Formation Linter Version & run Linter.
         run: |
           #cfn-lint --version
-          cfn-lint pass-cfn.yml
+          cfn-lint *.yml
