--- a/pass-cfn.yml
+++ b/pass-cfn.yml
@@ -1,16 +1,16 @@
 ---
 AWSTemplateFormatVersion: '2010-09-09'
 
-Parameters:
-  Name:
-    Type: String
-    Default: hello
-    Description: changed
+# Parameters:
+#   Name:
+#     Type: String
+#     Default: hello
+#     Description: changed
   
-  Host:
-    Type: String
-    Default: name
-    
+#   Host:
+#     Type: String
+#     Default: name
+
 #Mappings:
 
 
