--- a/.github/workflows/cfnlinter.yml
+++ b/.github/workflows/cfnlinter.yml
@@ -17,8 +17,10 @@ jobs:
         run: |
           #cfn-lint --version
           #cfn-lint *.yml
+          echo "1st Attempt"
           cfn-lint ./**/*.yaml
+          echo "2nd Attempt"
           cfn-lint -t ./**/*.yaml
-
-
+          echo "3rd Attempt"
+          cfn-lint cfn/**/*.yaml
 
