--- a/cfn/pass-cfn.yml
+++ b/cfn/pass-cfn.yml
@@ -2,6 +2,19 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: Misc
 
+# Parameters:
+#   Name:
+#     Type: String
+#     Default: hello
+#     Description: changed
+  
+#   Host:
+#     Type: String
+#     Default: name
+
+#Mappings:
+
+
 Conditions:
   NeverValid: !Equals [ True, False ]
 
