--- a/cfn/fail-cfn.yml
+++ b/cfn/fail-cfn.yml
@@ -1,27 +1,27 @@
----
-AWSTemplateFormatVersion: '2010-09-09'
-Description: Misc
+# ---
+# AWSTemplateFormatVersion: '2010-09-09'
+# Description: Misc
 
-Parameters:
-  Name:
-    Type: String
-    Default: hello
-    Description: changed
+# Parameters:
+#   Name:
+#     Type: String
+#     Default: hello
+#     Description: changed
   
-  Host:
-    Type: String
-    Default: name
+#   Host:
+#     Type: String
+#     Default: name
 
-#Mappings:
+# #Mappings:
 
 
-Conditions:
-  NeverValid: !Equals [ True,, False ]
+# Conditions:
+#   NeverValid: !Equals [ True,, False ]
 
-Resources:
-  NullResource:
-    Type: 'Custom::NullRsource'
-    Condition: NeverValid
+# Resources:
+#   NullResource:
+#     Type: 'Custom::NullRsource'
+#     Condition: NeverValid
 
-# lets add a comment
-#Outputs:
+# # lets add a comment
+# #Outputs:
