--- a/cfn/fail-cfn.yml
+++ b/cfn/fail-cfn.yml
@@ -16,7 +16,7 @@ Parameters:
 
 
 Conditions:
-  NeverValid: !Equals [ True,, False ]
+  NeverValid: !Equals [ True, False ]
 
 Resources:
   NullResource:
