--- a/cfn/pass-cfn.yml
+++ b/cfn/pass-cfn.yml
@@ -2,15 +2,15 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: Misc words an ipsum facto
 
-Parameters:
-  Name:
-    Type: String
-    Default: hello
-    Description: changed
+# Parameters:
+#   Name:
+#     Type: String
+#     Default: hello
+#     Description: changed
   
-  Host:
-    Type: String
-    Default: name
+#   Host:
+#     Type: String
+#     Default: name
 
 Conditions:
   NeverValid: !Equals [ True, False ]
